# mobilenet-ssd-object-detection

./: .gitignore  CMakeLists.txt  HOW_TO_RUN.md  PROJECT_EXPLAINED.md  README.md  download_model.sh
src/: main.cpp
